// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`summary for a GML job matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
    data-test="job-summary"
  >
    <div
      class="header"
    >
      <h3
        class="title"
      >
        Job summary
      </h3>
      <div
        class="taskDetails"
      >
        <span
          data-test="job-summary-filename"
        >
          gml1.gml
        </span>
         - 
        <span
          data-test="job-summary-date"
        >
          2020-02-12 13:00:32
 
        </span>
      </div>
    </div>
    <div
      class="tags"
      data-test="job-summary-tags"
    >
      <div
        class="jsx-72316749 positive"
        data-test="dhis2-uicore-tag"
      >
        <span
          class="jsx-1110058759"
          data-test="dhis2-uicore-tag-text"
        >
          Completed
        </span>
      </div>
      <div
        class="jsx-72316749 negative bold"
        data-test="dhis2-uicore-tag"
      >
        <span
          class="jsx-1110058759"
          data-test="dhis2-uicore-tag-text"
        >
          Error
        </span>
      </div>
      <div
        class="jsx-72316749 neutral bold"
        data-test="dhis2-uicore-tag"
      >
        <span
          class="jsx-1110058759"
          data-test="dhis2-uicore-tag-text"
        >
          Dry run
        </span>
      </div>
    </div>
    <div
      class="jsx-1555285825 jsx-876534464 "
      data-test="dhis2-uicore-divider"
    />
    <div
      class="typeReportSummary"
      data-test="job-summary-summary"
    >
      <div>
        <div>
          <div
            class="container"
            data-test="job-summary-single-summary"
          >
            <span
              class="label"
            >
              Summary
            </span>
            <table
              class="jsx-2430604489 "
              data-test="dhis2-uicore-table"
            >
              <thead
                data-test="dhis2-uicore-tablehead"
              >
                <tr
                  class="jsx-3124144591 zebraStriping"
                  data-test="dhis2-uicore-tablerowhead"
                >
                  <th
                    class="jsx-1796049005 "
                    data-test="dhis2-uicore-tablecellhead"
                  >
                    Created
                  </th>
                  <th
                    class="jsx-1796049005 "
                    data-test="dhis2-uicore-tablecellhead"
                  >
                    Deleted
                  </th>
                  <th
                    class="jsx-1796049005 "
                    data-test="dhis2-uicore-tablecellhead"
                  >
                    Ignored
                  </th>
                  <th
                    class="jsx-1796049005 "
                    data-test="dhis2-uicore-tablecellhead"
                  >
                    Updated
                  </th>
                  <th
                    class="jsx-1796049005 "
                    data-test="dhis2-uicore-tablecellhead"
                  >
                    Total
                  </th>
                </tr>
              </thead>
              <tbody
                data-test="dhis2-uicore-tablebody"
              >
                <tr
                  class="jsx-3124144591 zebraStriping"
                  data-test="dhis2-uicore-tablerow"
                >
                  <td
                    class="jsx-996330601 "
                    data-test="dhis2-uicore-tablecell"
                  >
                    0
                  </td>
                  <td
                    class="jsx-996330601 "
                    data-test="dhis2-uicore-tablecell"
                  >
                    0
                  </td>
                  <td
                    class="jsx-996330601 "
                    data-test="dhis2-uicore-tablecell"
                  >
                    0
                  </td>
                  <td
                    class="jsx-996330601 "
                    data-test="dhis2-uicore-tablecell"
                  >
                    0
                  </td>
                  <td
                    class="jsx-996330601 "
                    data-test="dhis2-uicore-tablecell"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="container"
          data-test="job-summary-type-count"
        >
          <span
            class="label"
          >
            Details by type
          </span>
          <table
            class="jsx-2430604489 "
            data-test="dhis2-uicore-table"
          >
            <thead
              data-test="dhis2-uicore-tablehead"
            >
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerowhead"
              >
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Type
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Created
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Deleted
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Ignored
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Updated
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Total
                </th>
              </tr>
            </thead>
            <tbody
              data-test="dhis2-uicore-tablebody"
            >
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerow"
              >
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  DefaultGmlImportService
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  0
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  0
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  0
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  0
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  0
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="container"
          data-test="job-summary-messages"
        >
          <span
            class="label"
          >
            Messages
          </span>
          <table
            class="jsx-2430604489 "
            data-test="dhis2-uicore-table"
          >
            <thead
              data-test="dhis2-uicore-tablehead"
            >
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerowhead"
              >
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  UID
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Type
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Property
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Message
                </th>
              </tr>
            </thead>
            <tbody
              data-test="dhis2-uicore-tablebody"
            >
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerow"
              >
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                />
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  DefaultGmlImportService
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                />
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  Failed to validate job runtime - \`GML import failed: Content is not allowed in prolog. On line 1 column 1.\`
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="events"
    >
      <div
        class="container"
        data-test="job-summary-log"
      >
        <span
          class="label"
        >
          Log
        </span>
        <table
          class="jsx-2430604489 "
          data-test="dhis2-uicore-table"
        >
          <thead
            data-test="dhis2-uicore-tablehead"
          >
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerowhead"
            >
              <th
                class="jsx-1796049005 "
                data-test="dhis2-uicore-tablecellhead"
              >
                Time
              </th>
              <th
                class="jsx-1796049005 "
                data-test="dhis2-uicore-tablecellhead"
              >
                Message
              </th>
              <th
                class="jsx-1796049005 "
                data-test="dhis2-uicore-tablecellhead"
              >
                ID
              </th>
            </tr>
          </thead>
          <tbody
            data-test="dhis2-uicore-tablebody"
          >
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                2020-02-12 13:00:32

              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                Failed to validate job runtime - \`GML import failed: Content is not allowed in prolog. On line 1 column 1.\`
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                init
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="jobDetails"
    >
      <div
        class="container"
        data-test="job-summary-job-details"
      >
        <span
          class="label"
        >
          Job details
        </span>
        <table
          class="jsx-2430604489 "
          data-test="dhis2-uicore-table"
        >
          <thead
            data-test="dhis2-uicore-tablehead"
          >
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerowhead"
            >
              <th
                class="jsx-1796049005 "
                data-test="dhis2-uicore-tablecellhead"
              >
                Key
              </th>
              <th
                class="jsx-1796049005 "
                data-test="dhis2-uicore-tablecellhead"
              >
                Value
              </th>
            </tr>
          </thead>
          <tbody
            data-test="dhis2-uicore-tablebody"
          >
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                files
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                gml1.gml
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                dryRun
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                true
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`summary for a data import job with conflicts matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
    data-test="job-summary"
  >
    <div
      class="header"
    >
      <h3
        class="title"
      >
        Job summary
      </h3>
      <div
        class="taskDetails"
      >
        <span
          data-test="job-summary-filename"
        >
          data2.json
        </span>
         - 
        <span
          data-test="job-summary-date"
        >
          2020-02-12 13:00:59
 
        </span>
      </div>
    </div>
    <div
      class="tags"
      data-test="job-summary-tags"
    >
      <div
        class="jsx-72316749 positive"
        data-test="dhis2-uicore-tag"
      >
        <span
          class="jsx-1110058759"
          data-test="dhis2-uicore-tag-text"
        >
          Completed
        </span>
      </div>
      <div
        class="jsx-72316749 negative"
        data-test="dhis2-uicore-tag"
      >
        <span
          class="jsx-1110058759"
          data-test="dhis2-uicore-tag-text"
        >
          Conflicts
        </span>
      </div>
      <div
        class="jsx-72316749 neutral bold"
        data-test="dhis2-uicore-tag"
      >
        <span
          class="jsx-1110058759"
          data-test="dhis2-uicore-tag-text"
        >
          Dry run
        </span>
      </div>
    </div>
    <div
      class="jsx-1555285825 jsx-876534464 "
      data-test="dhis2-uicore-divider"
    />
    <div
      class="container"
      data-test="job-summary-summary"
    >
      <div>
        <div
          class="container"
          data-test="job-summary-single-summary"
        >
          <span
            class="label"
          >
            Summary
          </span>
          <table
            class="jsx-2430604489 "
            data-test="dhis2-uicore-table"
          >
            <thead
              data-test="dhis2-uicore-tablehead"
            >
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerowhead"
              >
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Status
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Description
                </th>
              </tr>
            </thead>
            <tbody
              data-test="dhis2-uicore-tablebody"
            >
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerow"
              >
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  WARNING
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  Import process completed successfully
                </td>
              </tr>
            </tbody>
          </table>
          <table
            class="jsx-2430604489 "
            data-test="dhis2-uicore-table"
          >
            <thead
              data-test="dhis2-uicore-tablehead"
            >
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerowhead"
              >
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Created
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Deleted
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Ignored
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Updated
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Total
                </th>
              </tr>
            </thead>
            <tbody
              data-test="dhis2-uicore-tablebody"
            >
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerow"
              >
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  0
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  0
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  173
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  0
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  173
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="container"
          data-test="job-summary-conflicts"
        >
          <span
            class="label"
          >
            Conflicts
          </span>
          <table
            class="jsx-2430604489 "
            data-test="dhis2-uicore-table"
          >
            <thead
              data-test="dhis2-uicore-tablehead"
            >
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerowhead"
              >
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Object
                </th>
                <th
                  class="jsx-1796049005 "
                  data-test="dhis2-uicore-tablecellhead"
                >
                  Value
                </th>
              </tr>
            </thead>
            <tbody
              data-test="dhis2-uicore-tablebody"
            >
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerow"
              >
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  V6L425pT3A0
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  Category option combo not found or not accessible for writing data
                </td>
              </tr>
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerow"
              >
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  Prlt0C1RF0s
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  Category option combo not found or not accessible for writing data
                </td>
              </tr>
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerow"
              >
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  hEFKSsPV5et
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  Category option combo not found or not accessible for writing data
                </td>
              </tr>
              <tr
                class="jsx-3124144591 zebraStriping"
                data-test="dhis2-uicore-tablerow"
              >
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  psbwp3CQEhs
                </td>
                <td
                  class="jsx-996330601 "
                  data-test="dhis2-uicore-tablecell"
                >
                  Category option combo not found or not accessible for writing data
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="rest"
        data-test="job-summary-summary-rest"
      />
    </div>
    <div
      class="events"
    >
      <div
        class="container"
        data-test="job-summary-log"
      >
        <span
          class="label"
        >
          Log
        </span>
        <table
          class="jsx-2430604489 "
          data-test="dhis2-uicore-table"
        >
          <thead
            data-test="dhis2-uicore-tablehead"
          >
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerowhead"
            >
              <th
                class="jsx-1796049005 "
                data-test="dhis2-uicore-tablecellhead"
              >
                Time
              </th>
              <th
                class="jsx-1796049005 "
                data-test="dhis2-uicore-tablecellhead"
              >
                Message
              </th>
              <th
                class="jsx-1796049005 "
                data-test="dhis2-uicore-tablecellhead"
              >
                ID
              </th>
            </tr>
          </thead>
          <tbody
            data-test="dhis2-uicore-tablebody"
          >
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                2020-02-12 12:00:58

              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                Initiated dataValueImport
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                init
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                2020-02-12 12:00:59

              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                Process started
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                oE17j9gw54i
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                2020-02-12 12:00:59

              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                Importing data values
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                SKEyN7hdwyd
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                2020-02-12 12:00:59

              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                Import done
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                CO2RDYqaGde
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="jobDetails"
    >
      <div
        class="container"
        data-test="job-summary-job-details"
      >
        <span
          class="label"
        >
          Job details
        </span>
        <table
          class="jsx-2430604489 "
          data-test="dhis2-uicore-table"
        >
          <thead
            data-test="dhis2-uicore-tablehead"
          >
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerowhead"
            >
              <th
                class="jsx-1796049005 "
                data-test="dhis2-uicore-tablecellhead"
              >
                Key
              </th>
              <th
                class="jsx-1796049005 "
                data-test="dhis2-uicore-tablecellhead"
              >
                Value
              </th>
            </tr>
          </thead>
          <tbody
            data-test="dhis2-uicore-tablebody"
          >
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                files
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                data2.json
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                format
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                JSON
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                dryRun
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                true
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                strategy
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                Updates only
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                preheatCache
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                false
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                skipAudit
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                false
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                dataElementIdScheme
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                Uid
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                orgUnitIdScheme
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                Uid
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                idScheme
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                Uid
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                skipExistingCheck
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                true
              </td>
            </tr>
            <tr
              class="jsx-3124144591 zebraStriping"
              data-test="dhis2-uicore-tablerow"
            >
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                firstRowIsHeader
              </td>
              <td
                class="jsx-996330601 "
                data-test="dhis2-uicore-tablecell"
              >
                false
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
